--- a/CollegeScorecard/Views/Shared/_Layout.cshtml
+++ b/CollegeScorecard/Views/Shared/_Layout.cshtml
@@ -11,8 +11,8 @@
     <nav>
         <div class="nav-bar">
             <a asp-area="" asp-controller="Home" asp-action="Index">Home </a><text> | </text>
-            <a asp-area="" asp-controller="Home" asp-action="Symbols">Colleges List </a><text> | </text>
-            <a asp-area="" asp-controller="Home" asp-action="Chart">College Scorecard </a><text> | </text>
+            <a asp-area="" asp-controller="Home" asp-action="CollegesList">Colleges List </a><text> | </text>
+            <a asp-area="" asp-controller="Home" asp-action="CollegeScorecard">College Scorecard </a><text> | </text>
             <a asp-area="" asp-controller="Home" asp-action="Refresh">Refresh </a><text> | </text>
         </div>
     </nav>
