--- a/CollegeScorecard/Views/Home/Index.cshtml
+++ b/CollegeScorecard/Views/Home/Index.cshtml
@@ -3,29 +3,28 @@
 }
 
 <h1>College Scorecard Application</h1>
+<h5>U.S. DEPARTMENT OF EDUCATION</h5>
 <hr />
 
 <div>
     <p>
-        This application let's you fetch college scorecard data from DATA.GOV Department of Education via their public <a href="https://api.data.gov/docs/ed/">API</a>.
-        The College Scorecard is designed to increase transparency, putting the power in the hands of the public — from those choosing colleges to those improving college quality — to see how well different schools are serving their students.
+        Find the college that’s the best fit for you!
+        Find out about colleges: their programs, costs, admissions, results, and more. The College Scorecard has the most reliable data on college costs, graduation, and post-college earnings.
+        <br />
+    </p>
+    <p>
+        College Scorecard application let's you fetch college scorecard data from DATA.GOV Department of Education via their public <a href="https://api.data.gov/docs/ed/" target="_blank">API</a>.
+        The College Scorecard project is designed to increase transparency, putting the power in the hands of students and families to compare how well individual postsecondary institutions are preparing their students to be successful. This project provides data to help students and families compare college costs and outcomes as they weigh the tradeoffs of different colleges, accounting for their own needs and educational goals.
         <br />
         <br />
         The <a asp-area="" asp-controller="Home" asp-action="CollegesList">Colleges List</a> tab fetches schools data from the
-            <a href="https://collegescorecard.ed.gov/data/documentation/">College Scorecard Data API </a> and displays the results.
-        This data can also be saved in the local database.
+        <a href="https://collegescorecard.ed.gov/data/documentation/" target="_blank">College Scorecard Data API</a> and displays the results.
+        This data is also saved into the local database.
+        <br />
         <br />
         The <a asp-area="" asp-controller="Home" asp-action="CollegeScorecard">College Scorecard</a> tab let's you select a College and fetches the scorecard details from local database.
-           
+        <br />
         <br />
         The <a asp-area="" asp-controller="Home" asp-action="Refresh">Refresh</a> tab let's you refresh the local database, that is, remove all its contents.
-    </p>
-    <p>
-        Following learning objectives are fulfilled -
-        <ul>
-            <li>Connection to REST API.</li>
-            <li>Connection to database.</li>
-            <li>CRUD operations.</li>
-        </ul>
-    </p>
+    </p>    
 </div>
