Final version of code 11-24 7pm

--- a/CollegeScorecard/Views/Home/CollegesList.cshtml
+++ b/CollegeScorecard/Views/Home/CollegesList.cshtml
@@ -4,10 +4,10 @@
         ViewData["Title"] = "Colleges List";
     }
 
-    <h1>List of Public Colleges - Florida</h1>    
+    <h1>List of Public Colleges - Florida and Georgia</h1>    
     <hr />
 
-    <table class="table">
+    <table>
         <thead>
             <tr>
                 <th>
