--- a/CollegeScorecard/Views/Home/Index.cshtml
+++ b/CollegeScorecard/Views/Home/Index.cshtml
@@ -17,14 +17,14 @@
         The College Scorecard project is designed to increase transparency, putting the power in the hands of students and families to compare how well individual postsecondary institutions are preparing their students to be successful. This project provides data to help students and families compare college costs and outcomes as they weigh the tradeoffs of different colleges, accounting for their own needs and educational goals.
         <br />
         <br />
-        The <a asp-area="" asp-controller="Home" asp-action="CollegesList">Colleges List</a> tab fetches schools data from the
+        The <a asp-area="" asp-controller="Home" asp-action="CollegesList">Colleges List</a> page fetches schools data from the
         <a href="https://collegescorecard.ed.gov/data/documentation/" target="_blank">College Scorecard Data API</a> and displays the results.
         This data is also saved into the local database.
         <br />
         <br />
-        The <a asp-area="" asp-controller="Home" asp-action="CollegeScorecard">College Scorecard</a> tab let's you select a College and fetches the scorecard details from local database.
+        The <a asp-area="" asp-controller="Home" asp-action="CollegeScorecard">College Scorecard</a> page let's you select a College and fetches the scorecard details from local database.
         <br />
         <br />
-        The <a asp-area="" asp-controller="Home" asp-action="Refresh">Refresh</a> tab let's you refresh the local database, that is, remove all its contents.
+        The <a asp-area="" asp-controller="Home" asp-action="AboutUs">About Us</a> provides the College Scorecard application logical data model, links to API and GitHub repository, and the team members details who created this application.
     </p>    
 </div>
