--- a/CollegeScorecard/Views/Shared/_Layout.cshtml
+++ b/CollegeScorecard/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
             <a asp-area="" asp-controller="Home" asp-action="Index">Home </a><text> | </text>
             <a asp-area="" asp-controller="Home" asp-action="CollegesList">Colleges List </a><text> | </text>
             <a asp-area="" asp-controller="Home" asp-action="CollegeScorecard">College Scorecard </a><text> | </text>
-            <a asp-area="" asp-controller="Home" asp-action="Refresh">Refresh </a><text> | </text>
+            <a asp-area="" asp-controller="Home" asp-action="AboutUs">About Us </a><text> | </text>
         </div>
     </nav>
     <div class="container body-content">
